--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glutin = "0.29.0"
+glutin = "0.30.3"
+glutin-winit = "0.2.1"
+winit = "0.27.5"
+raw-window-handle = "0.5.0"
+egui = "0.20.1"
 gl = "0.14.0"
-egui = "0.18.1"
 miniserde = "0.1.24"
 
 [dependencies.windows]
-version = "0.39.0"
+version = "0.43.0"
 features = [
     "Data_Xml_Dom",
     "Win32_Foundation",
